hydro2/hydro2-operator-derive/tests/trybuild/fail_generics_bad_wrong_references.stderr
error[E0392]: type parameter `S` is never used
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:18:27
   |
18 | pub struct MissingGeneric<S: Copy + Debug + Send + Sync> {
   |                           ^ unused type parameter
   |
   = help: consider removing `S`, referring to it in a field, or using a marker such as `PhantomData`

error[E0283]: type annotations needed
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:12:26
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          ^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: std::marker::Copy`
note: required by a bound in `MissingGenericIO::None`
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:18:30
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          -------- required by a bound in this unit variant
...
18 | pub struct MissingGeneric<S: Copy + Debug + Send + Sync> {
   |                              ^^^^ required by this bound in `MissingGenericIO::None`
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:12:26
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          ^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: std::marker::Copy`
note: required by a bound in `MissingGenericIO::None`
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:18:30
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          -------- required by a bound in this unit variant
...
18 | pub struct MissingGeneric<S: Copy + Debug + Send + Sync> {
   |                              ^^^^ required by this bound in `MissingGenericIO::None`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:12:26
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          ^^^^^^^^
   |                          |
   |                          expected `&S`, found `&i32`
   |                          arguments to this method are incorrect
...
18 | pub struct MissingGeneric<S: Copy + Debug + Send + Sync> {
   |                           - expected this type parameter
   |
   = note: expected reference `&S`
              found reference `&i32`
note: method defined here
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:25:14
   |
25 |     async fn some_op(&self, _val: &S) -> NetResult<S> {
   |              ^^^^^^^        --------
   = note: this error originates in the derive macro `Operator` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:12:26
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          ^^^^^^^^
   |                          |
   |                          expected `i32`, found type parameter `S`
   |                          arguments to this enum variant are incorrect
...
18 | pub struct MissingGeneric<S: Copy + Debug + Send + Sync> {
   |                           - found this type parameter
   |
   = note:        expected type `i32`
           found type parameter `S`
note: tuple variant defined here
  --> tests/trybuild/fail_generics_bad_wrong_references.rs:12:26
   |
12 | #[derive(Debug,NamedItem,Operator)]
   |                          ^^^^^^^^
   = note: this error originates in the derive macro `Operator` (in Nightly builds, run with -Z macro-backtrace for more info)
